# NeonDrift

./: .gitignore  README.md  address_temp.txt  body.json  brace_debug.json  brace_debug_output.txt  build_errors.txt  build_log.txt  build_log_vite.txt  check_again.json  check_again3.json  check_functions.json  clean.json  compile_errors.txt  create_payload.json  create_response.txt  debug_internal.js  deploy_wallet_auth.txt  diff.txt  fix-idl.js  functions.json  functions.txt  gen-idl.cjs  help.txt  index.html  insforge-instructions.md  old_ai.tsx  out.txt  out_secrets.txt  package-lock.json  package.json  probe_endpoints.js  schema.sql  schema_chat.sql  schema_matches.sql  schema_mvp.sql  secrets.txt  server_logs.txt  tailwind.config.js  test-fn.js  (+10 more)
functions/: distribute-rewards.js
neon-contracts/: Anchor.toml  Cargo.toml  anchor_build_log.txt  build_deploy.txt  build_err.txt  build_err10.txt  build_err10_utf8.txt  build_err11.txt  build_err11_utf8.txt  build_err12.txt  build_err13.txt  build_err14.txt  build_err15.txt  build_err16.txt  build_err2.txt  build_err2_utf8.txt  build_err3.txt  build_err3_utf8.txt  build_err4.txt  build_err4_utf8.txt  build_err5.txt  build_err5_utf8.txt  build_err7.txt  build_err8.txt  build_err8_utf8.txt  build_err9.txt  build_err9_utf8.txt  build_err_cmd.txt  build_err_utf8.txt  build_logs.txt  build_output.txt  cargo_err.txt  cargo_error.txt  compile_err.txt  deploy_output.txt  out.txt  program_id.txt  utf8_err.txt  (+1 more)
neon-contracts/programs/neon-contracts/: Cargo.toml  tree.txt
neon-contracts/programs/neon-contracts/src/: lib.rs
(+153 files in other folders)
